# terpvault

./: .gitignore  CHANGELOG.md  FOUNDATION.md  PROJECT_OVERVIEW.md  README.md  REAL_ARTIFACT_REPORT.md  REAL_CATALOG_AUDIT.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 3469db1ee2f6_initial_schema.py  5a4d539d498f_initial_schema.py  9923c9d6f389_initial_schema.py
data/db/: terpvault.sqlite
docs/: ARCHITECTURE.md
scripts/: analyze_pdfs.py  analyze_pdfs2.py  analyze_pdfs3.py  analyze_pdfs4.py  check1_and_2.py  check1_and_2_v2.py  check3_and_4.py  check4_detail.py  check4_fast.py  check5_test.py  check_data.py  compare_builders.py  compare_builders2.py  debug_card_count.py  debug_card_count2.py  final_verification.py  final_verify.py  find_missing2.py  find_missing3.py  find_missing4.py  find_missing5.py  find_missing_products.py  generate_logo_concepts.py  generate_mockups.py  generate_pdfs.py  measure_all.py  measure_fast.py  page_audit.py  page_audit2.py  page_audit3.py  page_audit4.py  page_audit5.py  refresh_catalog.py  show_examples.py  verify_fix.py
terpvault/: cli.py
terpvault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
terpvault/config/: settings.py  supplier_config.py
terpvault/domain/: changes.py  (+3 more)
tests/: test_catalog_builder.py  test_changes_persistence.py  test_cli.py  test_config.py  test_database.py  test_differ.py  test_export.py  test_html.py  test_integrity.py  test_normalizer.py  test_pdf.py  test_portal.py  test_report.py  test_repository.py  test_search_index.py  test_sync.py
(+44 files in other folders)
