[project]
name = "terpvault"
version = "0.1.0"
description = "Supplier synchronization and catalog publishing platform"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "jinja2>=3.1,<4",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "weasyprint>=69,<70",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]

[project.scripts]
terpvault = "terpvault.cli:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["terpvault*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
